--- a/docker-compose.win.yml
+++ b/docker-compose.win.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   mongo:
     image: mongo:4.1.5-windowsservercore-ltsc2016
+    tmpfs:
+      - /data/db
     ports:
       - 27017:27017
   minio:
