--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,14 @@ variables:
   modulePath: '$(GOPATH)\src\github.com\$(build.repository.name)' # Path to the module's code
 
 steps:
+- task: DockerCompose@0
+  displayName: 'Set up Mongo'
+  inputs:
+    dockerComposeFile: '**/docker-compose.win.yml'
+    action: 'Run A Specific Service'
+    projectName: 'athensdev'
+    serviceName: 'mongo'
+
 - powershell: |
     mkdir "$env:GOBIN"
     mkdir "$env:GOPATH\pkg"
@@ -22,7 +30,6 @@ steps:
   displayName: 'Set up the Go workspace'
 
 - powershell: |
-    docker-compose -f docker-compose.win.yml -p athensdev up -d mongo
     [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
     Invoke-WebRequest -Uri "https://dl.minio.io/server/minio/release/windows-amd64/minio.exe" -OutFile "minio.exe"
     Start-Process -NoNewWindow minio.exe 'server --address ":9001" .'
