--- a/docker-compose.win.yml
+++ b/docker-compose.win.yml
@@ -1,9 +1,10 @@
 version: '3'
 services:
   mongo:
-    image: mongo:4.1.5-windowsservercore-ltsc2016
+    image: mongo:3.6-windowsservercore-ltsc2016
     tmpfs:
       - /data/db
+      - /data/configdb
     ports:
       - 27017:27017
   minio:
